--- a/qa-api/pom.xml
+++ b/qa-api/pom.xml
@@ -36,6 +36,16 @@
       <artifactId>jackson-databind</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-junit5</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-rest-assured</artifactId>
+    </dependency>
+
     <!--test dependencies-->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
