Fix ci/cd scripts

--- a/.github/workflows/test&deploy.yml
+++ b/.github/workflows/test&deploy.yml
@@ -1,12 +1,13 @@
 name: Test and deploy artifacts
 
-env:
-  GITHUB_TOKEN: {{secrets.TOKEN}}
+on:
+  push:
+    branches:
+      - 'main'
+      - 'release/**'
 
-on: [push]
-  branches:
-    - 'main'
-    - 'release/**'
+env:
+  GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
 jobs:
   build:
