--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>pl.net.testit.serum</groupId>
     <artifactId>serum</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>api</artifactId>
@@ -22,11 +22,6 @@
     </dependency>
 
     <dependency>
-      <groupId>com.google.truth</groupId>
-      <artifactId>truth</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
     </dependency>
@@ -37,6 +32,13 @@
     </dependency>
 
     <!--test dependencies-->
+
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
