--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>pl.net.testit.serum</groupId>
     <artifactId>serum</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -27,6 +27,14 @@
     <dependency>
       <groupId>org.awaitility</groupId>
       <artifactId>awaitility</artifactId>
+    </dependency>
+
+    <!--test dependencies-->
+
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
